# pcb-anomaly-detection

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
configs/: hparams.yaml
logs/: telemetry_log_cpp.json  telemetry_log_py.json
src/cpp/: CMakeLists.txt  engine.cpp  pipeline_w_opcua.cpp  preprocessing.cpp  tensorrt.cpp
src/cpp_inference/: CMakeLists.txt  engine.cpp  kernel.cu  pipeline.cpp  preprocessing.cpp  tensorrt.cpp
src/inference/: export_onnx.py
src/preprocessing/: gt_preprocess.py  preprocess.py
src/production/: CMakeLists.txt  kernel.cu  main.cpp
src/python/inference/: engine.py
src/python/validation/: validate.py
src/training/: train.py
src/validation/: calibrate.py
